// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-heap destination: identifyUser action - all fields 1`] = `
Object {
  "app_id": "G&st^jdtW&@22!QU^",
  "identity": "G&st^jdtW&@22!QU^",
  "user_id": 4792922918011540,
}
`;

exports[`Testing snapshot for actions-heap destination: identifyUser action - required fields 1`] = `
Object {
  "app_id": "G&st^jdtW&@22!QU^",
  "identity": "G&st^jdtW&@22!QU^",
  "user_id": 4792922918011540,
}
`;

exports[`Testing snapshot for actions-heap destination: trackEvent action - all fields 1`] = `
Object {
  "app_id": "kFJwrNh$DP38FB",
  "events": Array [
    Object {
      "custom_properties": Object {
        "testType": "kFJwrNh$DP38FB",
      },
      "event": "track",
      "idempotency_key": "kFJwrNh$DP38FB",
      "properties": Object {
        "segment_library": "cloud-mode-destination",
      },
      "timestamp": "2021-02-01T00:00:00.000Z",
      "user_identifier": Object {
        "identity": "kFJwrNh$DP38FB",
      },
    },
  ],
  "library": "Segment",
}
`;

exports[`Testing snapshot for actions-heap destination: trackEvent action - required fields 1`] = `
Object {
  "app_id": "kFJwrNh$DP38FB",
  "events": Array [
    Object {
      "custom_properties": Object {},
      "event": "track",
      "idempotency_key": "kFJwrNh$DP38FB",
      "properties": Object {
        "segment_library": "cloud-mode-destination",
      },
      "user_identifier": Object {
        "identity": "kFJwrNh$DP38FB",
      },
    },
  ],
  "library": "Segment",
}
`;
